update info for residents M src/pages/info-for-residents.astro

--- a/src/pages/info-for-residents.astro
+++ b/src/pages/info-for-residents.astro
@@ -33,29 +33,29 @@ import Emphasis from "../components/Emphasis.astro";
         <p class="text-white">
           The username of every resident account in Parkspot should start with a
           <Emphasis>T</Emphasis> or a <Emphasis>B</Emphasis>. For example:
-          <Emphasis>T1234567</Emphasis> or <Emphasis>B1234567</Emphasis>.
+          <Emphasis>T8290567</Emphasis> or <Emphasis>B8290567</Emphasis>.
         </p>
         <h2 class="text-white text-2xl font-bold">Tenants Vs Owners</h2>
         <p class="text-white">
           If the resident is a tenant, then they should have a username like
-          <Emphasis>T1234567</Emphasis>. If they are an owner they should have a
+          <Emphasis>T8290567</Emphasis>. If they are an owner they should have a
           username like
-          <Emphasis>B1234567</Emphasis>.
+          <Emphasis>B8290567</Emphasis>.
         </p>
         <h2 class="text-white text-2xl font-bold">Numbers Representation</h2>
         <p class="text-white">
           The first four numbers of the username represent the building number
           of the account holder. So for example, if someone had the username
-          <Emphasis>T1234567</Emphasis>, this would mean that they live in
-          building <Emphasis>1234</Emphasis>.
+          <Emphasis>T8290567</Emphasis>, this would mean that they live in
+          building <Emphasis>8290</Emphasis>.
         </p>
         <p class="text-white">
           The last 3 numbers represent the unit number of the account holder. So
           for example, if someone had the username <Emphasis>
-            T1234567
+            T8290567
           </Emphasis>, this would mean that they live in unit <Emphasis>
             567
-          </Emphasis>.
+          </Emphasis> of building <Emphasis>8290</Emphasis>.
         </p>
       </div>
     </div>
